# c-sysv-ipc

./: .gitignore  CMakeLists.txt  Makefile  README.md  consumer  producer
include/alquicor/: utils.h
include/framework/: init.h
include/framework/args/: env.h
include/framework/foundation/: init.h
include/framework/fs/: files.h
include/framework/ipc/: semaphore.h  tokens.h
include/framework/os/: env.h
include/framework/utils/: io.h  logging.h  rand.h
include/fs/: files.h
include/ipc/: semaphore.h  tokens.h
include/log/: log.h
include/restaurant/: utils.h
include/utils/: logging.h
src/: client.c  consumer.c  files.c  files.h  global.h  main.c  manager.c  producer.c  restaurant.h
src/alquicor/: utils.h
src/consumer/: main.c
src/framework/: init.c
src/framework/args/: env.c
src/framework/foundation/: init.c
src/framework/fs/: files.c
src/framework/ipc/: semaphore.c  tokens.c
src/framework/log/: log.c
src/framework/os/: env.c
src/framework/utils/: io.c  logging.c  rand.c
src/ipc/: semaphore.c  semaphore.h  tokens.c  tokens.h
src/producer/: main.c
src/restaurant/: serialization.c  types.h  utils.c
src/utils/: logging.c  logging.h
